assets/css/main.css
@font-face {
    font-family: 'aaarghnormal';
    src: url('../fonts/aaargh/aaargh-webfont.eot');
    src: url('../fonts/aaargh/aaargh-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/aaargh/aaargh-webfont.woff2') format('woff2'),
         url('../fonts/aaargh/aaargh-webfont.woff') format('woff'),
         url('../fonts/aaargh/aaargh-webfont.ttf') format('truetype'),
         url('../fonts/aaargh/aaargh-webfont.svg#aaarghnormal') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'from_cartoon_blocksregular';
    src: url('../fonts/from_cartoon_blocks/from_cartoon_blocks-webfont.eot');
    src: url('../fonts/from_cartoon_blocks/from_cartoon_blocks-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/from_cartoon_blocks/from_cartoon_blocks-webfont.woff2') format('woff2'),
         url('../fonts/from_cartoon_blocks/from_cartoon_blocks-webfont.woff') format('woff'),
         url('../fonts/from_cartoon_blocks/from_cartoon_blocks-webfont.ttf') format('truetype'),
         url('../fonts/from_cartoon_blocks/from_cartoon_blocks-webfont.svg#from_cartoon_blocksregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'dk_lemon_yellow_sunregular';
    src: url('../fonts/dk_lemon_yellow_sun/dk_lemon_yellow_sun-webfont.eot');
    src: url('../fonts/dk_lemon_yellow_sun/dk_lemon_yellow_sun-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/dk_lemon_yellow_sun/dk_lemon_yellow_sun-webfont.woff2') format('woff2'),
         url('../fonts/dk_lemon_yellow_sun/dk_lemon_yellow_sun-webfont.woff') format('woff'),
         url('../fonts/dk_lemon_yellow_sun/dk_lemon_yellow_sun-webfont.ttf') format('truetype'),
         url('../fonts/dk_lemon_yellow_sun/dk_lemon_yellow_sun-webfont.svg#dk_lemon_yellow_sunregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'epicawesomenessscribblzmedium';
    src: url('../fonts/EpicAwesomenessScribblz/EpicAwesomenessScribblz-webfont.eot');
    src: url('../fonts/EpicAwesomenessScribblz/EpicAwesomenessScribblz-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/EpicAwesomenessScribblz/EpicAwesomenessScribblz-webfont.woff2') format('woff2'),
         url('../fonts/EpicAwesomenessScribblz/EpicAwesomenessScribblz-webfont.woff') format('woff'),
         url('../fonts/EpicAwesomenessScribblz/EpicAwesomenessScribblz-webfont.ttf') format('truetype'),
         url('../fonts/EpicAwesomenessScribblz/EpicAwesomenessScribblz-webfont.svg#epicawesomenessscribblzmedium') format('svg');
    font-weight: normal;
    font-style: normal;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

h1 {
  font-family: 'epicawesomenessscribblzmedium';
  font-size: 3em;
  padding-top: 15px;
  margin-bottom: 33px;
}

h2 {
  font-family: 'epicawesomenessscribblzmedium';
  font-size: 1.78em;
  padding-top: 1px;
  margin-bottom: 23px;
}

h3 {
  font-family: "aaarghnormal";
  font-size: 1.4em;
  padding-top: 4px;
  margin-bottom: 20px;
}

h4 {
  font-family: 'epicawesomenessscribblzmedium';
  font-size: 1.7em;
  padding-top: 1px;
  margin-bottom: -1px;

}

h5 {
  font-family: "aaarghnormal";
  font-size: 1.4em;
  padding-top: 4px;
  margin-bottom: -4px;
}

h6 {
  font-family: "aaarghnormal";
  font-size: 1.2em;
  padding-top: 5px;
  margin-bottom: -5px;
}

body {
  background-image: url("../images/darkwood.jpg");
  background-attachment: fixed;
  margin: 0;
}

blockquote {
  font-size: 19px;
  font-style: italic;
  margin: 0px 0px 0px 40px;
  padding: 0px;
}

hr {
  border: 2px solid #000;
  margin: -1px 0px 21px 0px;
}

a:link {
    color: #000;
    text-decoration: none;
}

/* visited link */
a:visited {
    color: #000;
}

/* mouse over link */
a:hover {
    color: #FF00FF;
    text-decoration: underline;
}

/* selected link */
a:active {
    color: #0000FF;
}

/* Code Block */
pre {
  margin: 0px 0px 23px 0px;
  padding: 10px 10px 11px 20px;
  background-color: #272822;
  border: 2px solid #878d8a;
  border-radius: 10px;
  color: #fff;
}

#paper {
  background-image: url("../images/red_line_bg2.png");
  background-repeat: repeat-y;
  background-color: #fff;
  max-width: 960px;
  min-width: 760px;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  position: relative;
}

#header {
  height: 100px;
}

#header #titleWrapper {
  display: table;
  height: 100%;
  margin-left: 96px;
}

#header .title {
  font-family: "epicawesomenessscribblzmedium";
  font-size: 2.2em;
  padding-left: 10px;
  display: table-cell;
  vertical-align: middle;
  font-weight: bolder;
}

#contentWrapper {
  background-image: url("../images/blue_line_bg2.png");
  padding-bottom: 24px;
}

#contentWrapper .content {
  margin-left: 96px;
  font-family: "aaarghnormal";
  font-color: blue;
  font-size: 16px;
  padding: 0px 70px 0px 10px;
  line-height: 150%;
}

#contentWrapper img {
  max-width: 784px;
  height: auto;
}

#contentWrapper p {
  margin: 0;
  margin-bottom: 18px;
  padding-top: 6px;
}

#contentWrapper ul, ol {
  margin: 0px;
}

#contentWrapper .post > ul,
#contentWrapper .post > ol {
  margin-bottom: 24px;
}

#contentWrapper li {
  padding-top: 5px;
  margin-bottom: -5px;
}

#contentWrapper li ul, li ol {
  margin-top: -5px;
}

/* Index Page */
#notebook {
  background-image: url("../images/notebook.png");
  width: 968px;
  height: 587px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.post-it {
  padding: 25px;
  width: 300px;
  height: 265px;
  position: absolute;
}

.post-it ul {
  font-family: "dk_lemon_yellow_sunregular";
  font-size: 20px;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#leftPostIt {
  background: url("../images/left_post_it.png") no-repeat;
  top: 35px;
  left: 80px;
  -ms-transform: rotate(-3deg);
  -webkit-transform: rotate(-3deg);
  transform: rotate(-3deg);
}

#leftPostIt .title {
  font-family: "from_cartoon_blocksregular";
  font-size: 67px;
}

#leftPostIt .content {
  padding: 0px 0px 0px 25px;
}

#rightPostIt {
  background: url("../images/right_post_it.png") no-repeat;
  top: 130px;
  left: 550px;
  -ms-transform: rotate(3deg);
  -webkit-transform: rotate(3deg);
  transform: rotate(3deg);
}

#rightPostIt li {
  margin-bottom: 10px;
}

#rightPostIt .date {
  font-size: 14px;
}

.pagination {
  font-family: "dk_lemon_yellow_sunregular";
  position: absolute;
}

#pagination-prev {
  top: 275px;
  left: 20px;
}

#pagination-next {
  top: 275px;
  left: 285px;
}

#pagination-num {
  top: 275px;
  left: 155px;
}

.home-template .outer, .paged .outer {
  display: table;
  position: absolute;
  height: 100%;
  width: 100%;
}

.home-template .middle, .paged .middle {
  display: table-cell;
  vertical-align: middle;
}

.home-template .inner, .paged .inner {
  margin-left: auto;
  margin-right: auto; 
  width: 968px;
}

/* About page */
.page-template-about .outer {
  display: table;
  position: absolute;
  height: 100%;
  width: 100%;
}

.page-template-about .middle {
  display: table-cell;
  vertical-align: middle;
}

.page-template-about .inner {
  margin-left: auto;
  margin-right: auto; 
  width: 1000px;
}

.nav {
  font-family: "dk_lemon_yellow_sunregular";
  position: absolute;
  font-size: 25px;
}
.page-template-about .nav {
  top: 20px;
  left: 10px;
}

#postNav {
  position: fixed;
  margin: 15px;
  z-index: 1;
}

#postNav a:visited {
  color: #fff;
}

#postNav a:link {
  color: #fff;
}
#postNav a:active {
  color: #fff;
}

#postNav a:hover {
  color: #FF00FF;
}

#polaroid {
  background-image: url("../images/polaroid.png");
  width: 1000px;
  height: 794px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

#portrait {
  background-image: url("../images/me.png");
  width: 933px;
  height: 591px;
  position: absolute;
  top: 64px;
  left: 38px;
}

#bluePostIt {
  font-family: "dk_lemon_yellow_sunregular";
  font-size: 20px;
  background-image: url("../images/blue_post_it.png");
  top: 160px;
  left: 110px;
  -ms-transform: rotate(-3deg);
  -webkit-transform: rotate(-3deg);
  transform: rotate(-3deg);
}

#bluePostIt .title {
  font-size: 36px;
}

#bluePostIt .title-small {
  font-size: 26px;
}

#socialMediaWrapper {
  top: 685px;
  width: 1000px;
  height: auto;
  position: absolute;
}

#socialMedia {
  margin-left: auto;
  margin-right: auto;
  width: 270px;
}

#socialMedia .icon {
  width: 80px;
  height: 80px;
  /*background-size: 80px auto;*/
  float: left;
}

#facebookIcon, #twitterIcon, #linkedinIcon {
  background-image: url("../images/social_media_icon_sprite.png");
}

#facebookIcon {
  background-position: 0px 0px;
  margin-right: 15px;
}

#facebookIcon:hover {
  background-position: -80px 0px;
}

#twitterIcon {
  background-position: 0px -160px;
  margin-right: 15px;
}

#twitterIcon:hover {
  background-position: -80px -160px;
}

#linkedinIcon {
  background-position: 0px -80px;
}

#linkedinIcon:hover {
  background-position: -80px -80px;
}

#disqus_thread {
  margin-left: 106px;
  margin-right: 60px;
  padding: 15px;
  border: 2px solid #878d8a;
  background-color: #fff;
}

#commentsLabel {
  margin-left: 96px;
  padding-left: 10px;
  padding-top: 24px;
}

#commentsLabel h3 {
  padding: 0;
  margin-bottom: 18px;
}

